# MazeTrix

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile.sh  compile_commands.json  main  main.cpp  main_old.cpp  run.sh  sfml-app
SFML-2.6.1/lib/: libsfml-audio-d.so.2.6.1  libsfml-audio.so.2.6  libsfml-graphics-d.so.2.6  libsfml-network.so.2.6
SFML-2.6.1/lib/cmake/SFML/: SFMLConfig.cmake  SFMLSharedTargets-release.cmake
SFML-2.6.1/pkgconfig/: sfml-all.pc  sfml-audio.pc  sfml-graphics.pc  sfml-network.pc  sfml-system.pc  sfml-window.pc
include/: cell.h  global.h  maze.h  pathfinder.h  race.h  random.h  structs.h
lib/: libsfml-audio-d.so.2.6  libsfml-graphics-d.so.2.6.1  libsfml-graphics.so.2.6  libsfml-graphics.so.2.6.1  libsfml-network-d.so.2.6  libsfml-system-d.so.2.6  libsfml-system.so.2.6  libsfml-window-d.so.2.6  libsfml-window-d.so.2.6.1  libsfml-window.so.2.6  libsfml-window.so.2.6.1
lib/cmake/SFML/: SFMLSharedTargets-debug.cmake
src/: cell.cpp  global.cpp  maze.cpp  pathfinder.cpp  race.cpp  random.cpp  structs.cpp
